--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/schematics": "^1.0.0",
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.1.4",
     "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
+    "@angular/core": "^15.0.0",
     "@angular/forms": "^14.1.0",
-    "@angular/material": "^7.0.0",
+    "@angular/material": "^15.1.4",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "~14.1.1",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.16",
